--- a/dss_comp_boot_temp.Rmd
+++ b/dss_comp_boot_temp.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "DSS Computing Bootcamp Template"
-author: "Ran Cetinkaya-Rundel"
+author: "Ran hi Cetinkaya-Rundel"
 date: "8/26/2016"
 output: html_document
 ---
